Bug 86550 - 4.4.0.0.beta1: some localized strings do not appear, English ones are displayed instead
Summary: 4.4.0.0.beta1: some localized strings do not appear, English ones are display...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.4.0.0.alpha2
Hardware: Other macOS (All)
: medium normal
Assignee: Andras Timar
URL:
Whiteboard: target:4.4.0
Keywords:
Depends on: 86517
Blocks:
  Show dependency treegraph
 
Reported: 2014-11-22 01:07 UTC by Martin Srebotnjak
Modified: 2014-12-07 17:51 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Srebotnjak 2014-11-22 01:07:49 UTC
Using 4.4.0.0.beta1 and Slovenian localization which is not conducted inside Pootle but on our own system. We synced pot files on Nov 17 and checked in fully localized po files (both UI and help) of that Nov 17 state into git, so the build system had almost all localized strings in Slovenian available (I checked now on the state of Nov 21 and only less than 60 strings changed since Nov 17, none of the strings reported here in this bug report are among those 60).

The non-localized strings (although their localization is available in *.po files) appear to be, among others:
- in the new color palette (it opens after clicking toolbar icons Text Color, Highlight Color, Background Color, Line Color) the strings "Recent", "Custom Color..." as well as palette names in the palette list "Default palette" and "Document colors" (these two strings seem to be missing from pot files, so they should be made localizable);
- the title of the "Pick a Color" window that opens after pressing the "Custom Color..." button in the new color palette;
- tooltip "Book view" and "Two page view" in the status bar; the "Single-page view" was changed after Nov 17 (hyphen was added) so it is logical it is not displayed as localized;
- "More Bullets..." and "More Numberings..." options at the bottom of the drop-down palette from the "Bullets" and "Numbering" icons' drop-down;
- the drop-down palette of the "Line spacing" icon from main toolbar has all strings un-localized: "Spacing:", "Custom Value", "Line Spacing:", "Single", "1.5 Lines", "Double", "Proportional", "At Least", "Leading", "Fixed", "Value:"; in this sub-window also the numbers are displayed as en-US and not sl, i.e. instead of comma a dot is used as decimal separator;
- the "Fields" icon drop-down list's ending option "More Fields..." appears unlocalized even though it is translated;
- the new and localized "Locale: $LOCALE" string in About window appears in English, i.e. "Locale: sl";
- new/updated "Comment on Change..." in "Edit - Track Changes" sub-menu is displayed in English instead of using Slovenian localization;
- the "Insert" sub-menu title in "Insert" menu is displayed in English, also "Audio or Video..." command from its sub-menu;

Here are some labels/strings that might be unlocalizable:
- the "Personalize" tab of the Options window has many untranslated labels: window title "Select Firefox Theme" (which is in pot/po files, so this goes above), buttons "Abstract", "Color", "Music", "Nature"; these seem not to be available in pot files, thus should be made localizable;
- New "chi-test" dialog has title from the "z-test" dialog as its code must have been pasted from there? Not localizable as well.
- "Audio or Video" icon tool-tip in Impress is either non-localizable or not displayed in localized language;

There is also a button width error for localized UI - opening the drop-down menu of the Table icon on the main toolbar the button "More options..." is displayed localized, but the button is too short so the Slovenian text gets partially truncated at both ends.
Comment 1 Joel Madero 2014-11-22 01:43:31 UTC
This is actually expected - localization isn't done until release. Closing as NOTABUG. Thanks!
Comment 2 Andras Timar 2014-11-22 08:21:59 UTC
@Joel, 

Slovenian is somewhat special, we use it as a test locale for detecting l10n issues early. As Martin stated, Slovenian translation was up to date as of Nov 17, so this report is worth investigating.
Comment 3 Commit Notification 2014-11-22 22:48:15 UTC
Andras Timar committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6745c24fdad942f61c225632688bce78da0a547e

fdo#86550 make some strings localizable

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Andras Timar 2014-11-22 23:16:09 UTC
I built from libreoffice-4-4 on OS X, and checked all of the issues. I did not find some of them, i.e. I saw localized strings. So maybe official beta1 was not built from the latest sources. The libreoffice-4.4.0.0.beta1 has the Nov17/Nov18 Slovenian commits, so I don't know...  

Anyway, you found many real issues, which I fixed in master and in libreoffice-4-4 branch. I also fixed the button on the table dropdown control. Let's see how good it will be in beta2 and let's close this bug now.
Comment 5 Martin Srebotnjak 2014-12-07 17:51:45 UTC
HI, I can confirm that in beta2 these issues are all solved for Slovenian.

Thanks, m.