fdo#86550 make some strings localizable

Change-Id: Ie3b47e30b22b4bbae86f575ca1c9f3639afd3afd